[tool.poetry]
name = "qiskit_pqcee_provider"
version = "0.1.2"
description = "A qiskit provider on the blockchain for the QuiC."
authors = ["Ștefan-Dan Ciocîrlan <stefan_dan@xn--ciocrlan-o2a.ro>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "qiskit_pqcee_provider" }]
include = ["contracts/*.sol", "mumbai_testnet_config.ini"]
classifiers = [
    "Intended Audience :: Developers",
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = "^3.10"
qiskit = {extras = ["visualization"], version = "^1.0.0"}
web3 = {extras = ["tester"], version = "^6.15.1"}
py-solc-x = "^2.0.2"
scikit-learn = "^1.4.1.post1"
numpy = "^1.26.4"
qiskit-aer = "^0.13.3"

[tool.poetry.group.test]

[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
pydata_sphinx_theme = "*"
sphinx-autoapi = "*"
sphinx-autoapi = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
